# texa

./: .gitattributes  .gitignore  .mise.toml  Makefile  README.md  build_macos.sh  build_windows.ps1  debug.py  pyproject.toml  requirements-dev.txt  requirements.txt  texa.py
backend/: __init__.py  file.py  helpers.py  state.py  worker.py
frontend/: index.html  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
frontend/src/: app.tsx  converter.ts  helpers.ts  index.css  index.tsx
frontend/src/components/: editor.tsx  image.tsx  result.tsx
frontend/src/components/settings/: advanced.tsx  fileStatus.tsx  layout.tsx  modelMgr.tsx
frontend/src/components/topbar/: layout.tsx  leftButtons.tsx  midStatus.tsx  rightButtons.tsx
frontend/src/stores/: editor.ts  image.ts  msg.ts  settings.ts  states.ts  window.ts
gui/: __main__.py  annotations.py  app.py  utils.py
gui.assets/: resources.qrc
gui/model/: __init__.py  mathjax.py  p2t.py  txf.py
gui/view/: __init__.py  config.py  control.py  editor.py  paste.py  render.py  statusbar.py
gui/view/modal/: models.py
gui/viewmodel/: __init__.py  infer.py  mdtex.py
