[project]
name = "texa"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "markdown>=3.7",
  "pillow>=10.4.0",
  "pyside6==6.7.3",
  "pymdown-extensions>=10.11",
  "result>=0.17.0",
  "optimum[onnxruntime]>=1.22.0",
]

[tool.pyright]
typeCheckingMode = "strict"
reportUnknownMemberType = false
reportAny = false
reportImplicitOverride = false
reportMissingTypeStubs = false

[tool.ruff.lint]
extend-select = ["I", "N", "PERF", "UP"]

[tool.uv]
dev-dependencies = [
  "memray>=1.14.0",
  "pyinstaller>=6.10.0",
  "scalene>=1.5.44.1",
]
