[project]
name = "pwv"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "huggingface-hub>=0.26.0",
    "pillow>=11.0.0",
    "platformdirs>=4.3.6",
    "pywebview>=5.3",
    "result>=0.17.0",
    "texifast[cpu]>=0.1.1",
]

[tool.pyright]
typeCheckingMode = "strict"
reportUnknownMemberType = false
reportAny = false
reportImplicitOverride = false
reportMissingTypeStubs = false
reportUnknownVariableType = false
reportUnknownArgumentType = false

[tool.ruff.lint]
extend-select = ["I", "N", "PERF", "UP"]

[tool.uv]
dev-dependencies = [
    "imageio>=2.36.0",
    "nuitka>=2.4.10",
    "pyinstaller>=6.11.0",
]
